  *  Password is now encrypted saved (trivial algorithm)

________________________________________________________________________________
VERSION 0.1 BETA-5

  *  NEW FEATURE: Date and time could now be displayed on splash screen
  *  NEW FEATURE: Traffic and costs are monitored on seperate traffic screen
  *  Should now work with bigger contact lists (eg up to 70 or more on S55)
  *  Should now work on Nokia 6800

________________________________________________________________________________
VERSION 0.1 BETA-6

  *  NEW FEATURE: There is now a chat history feature available
  *  NEW FEATURE: ICQ sound can be played on S55
  *  NEW FEATURE: Light is switched on on Siemens phones when new message arrives
  *  NEW FEATURE: Russian character and menu text support
  *  NEW FEATURE: The display of offline contacts can be switched off now
  *  NEW FEATURE: By name or by staus sorting order of contact list is now switchable
  *  NEW FEATURE: Language module can be selected manually
  *  New Splash screen and Options pane
  *  Nokia 6800 is now own distribution set
  *  It't now possible to enter "." seperated values for the money values
  *  Major performance enhancements with contact list handling
  *  Some bug fixes

________________________________________________________________________________
VERSION 0.1 BETA-7

  *  Some UI changes

________________________________________________________________________________
VERSION 0.1 BETA-8

  *  Soundfile name in Siemens version is now configureable
  *  Images are stored in one file except of different
  *  Nokia build does not include traffic monitor anymore
  *  The chat history feature can be disabled
  *  New Module System: Traffic monitor is a module now
  *  Traffic and time now displayed in the title line of the contact list screen
  
_________________________________________________________________________________
VERSION 0.1. BETA-9

  * Vibra and light options for Nokia phones