@@ -93,3 +93,4 @@ ________________________________________________________________________________
 VERSION 0.1. BETA-9
 
   * Vibra and light options for Nokia phones
+  * Type of connection is now configurable
